--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
