Enhance application configuration and UI components: - Update Amplify configuration to include environment variables and custom headers for caching. - Modify Next.js configuration for standalone output and add CSS support. - Introduce PostCSS configuration for Tailwind CSS and Autoprefixer. - Implement FeaturedCategories component with loading state and improved category handling. - Refactor AuthContext to handle localStorage errors and improve user data management. - Remove unnecessary withCredentials option in Axios instances for auth and category services.

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,7 @@ frontend:
         - npm install
     build:
       commands:
+        - env | grep -e NODE_ENV -e NEXT_PUBLIC_ >> .env.production
         - npm run build
   artifacts:
     baseDirectory: .next
@@ -15,3 +16,16 @@ frontend:
     paths:
       - node_modules/**/*
       - .next/cache/**/*
+  customHeaders:
+    - pattern: "**/*"
+      headers:
+        - key: "Cache-Control"
+          value: "public, max-age=0, must-revalidate"
+    - pattern: "_next/static/**/*"
+      headers:
+        - key: "Cache-Control"
+          value: "public, max-age=31536000, immutable"
+    - pattern: "static/**/*"
+      headers:
+        - key: "Cache-Control"
+          value: "public, max-age=31536000, immutable"
