Update build configuration to support Tailwind CSS and PostCSS
- Add Tailwind CSS, PostCSS, and Autoprefixer as development dependencies in package.json.
- Modify amplify.yml to include installation of Tailwind CSS and PostCSS during the pre-build step.
- Remove custom webpack configuration for CSS in next.config.mjs.
- Update globals.css to include Tailwind directives and a placeholder for custom styles.

--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ frontend:
     preBuild:
       commands:
         - npm install
+        - npm install -D tailwindcss postcss autoprefixer
     build:
       commands:
         - env | grep -e NODE_ENV -e NEXT_PUBLIC_ >> .env.production
