--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "autoprefixer": "^10.4.16"
   }
 }
