--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.16.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "react": "^18.2.0",
