--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.1",
     "sonner": "^1.2.0"
   },
   "devDependencies": {
