--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@types/react-datepicker": "^7.0.0",
     "axios": "^1.6.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.16.5",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "react": "^18.2.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
