--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.16.5",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
@@ -27,6 +28,7 @@
     "sonner": "^1.2.0"
   },
   "devDependencies": {
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
